<resources>
    <!-- Login Page Strings -->
    <string name="app_name">Mainland Buses</string>
    <string name="app_logo">App Logo</string>
    <string name="sign_in">Sign In</string>
    <string name="email_field">Enter Email</string>
    <string name="password_field">Enter Password</string>
    <string name="login_button">Login</string>
    <string name="signup_button">Sign Up</string>
    <string name="guest_field">Continue as Guest</string>
    <string name="main_menu">Search Page</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Sign Up Page Strings -->
    <string name="signup_text">Sign Up</string>

    <!-- Search Page -->
    <string name="search">Search</string>
    <string name="google_map_string">See Map</string>
    <string name="logOut">Log Out</string>
    <string name="type">Activity Type</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="temperature">Temperature Range</string>
    <string name="date">Date</string>
    <string name="start_date">start date</string>
    <string name="end_date">end date</string>
    <string name="search_page_large">Search Page</string>
    <string name="destination">Please provide info below</string>
    <string name="stopNo">Stop Number</string>

    <string-array name="weather_types">
        <item>Trails</item>
        <item>Camping</item>
        <item>Biking</item>
        <item>Hiking</item>
    </string-array>

    <string name="title_activity_choose_location">ChooseLocation</string>
    <string name="choose_location">Choose Location</string>
    <string name="back">Back</string>

    <!-- dummy Result -->
    <string-array name="code_name">
        <item>Canada</item>
        <item>China</item>
        <item>Hong kong</item>
        <item>Ukraine</item>
        <item>Lagos</item>
        <item>Venice</item>
        <item>Barcelona</item>
        <item>Manchester</item>
        <item>Southampton</item>
        <item>Korea</item>
        <item>New york</item>
        <item>Dallas</item>
        <item>LA</item>
    </string-array>

    <string-array name="locations">
        <item>Vancouver</item>
        <item>Delta</item>
        <item>Surrey</item>
        <item>Burnaby</item>
        <item>North Vancouver</item>
        <item>South Vancouver</item>
        <item>East Vancouver</item>
        <item>Langley</item>
    </string-array>

    <string-array name="locations_description">
        <item>Place Holder text for Vancouver</item>
        <item>Place Holder text for Delta</item>
        <item>Place Holder text for Surrey</item>
        <item>Place Holder text for Burnaby</item>
        <item>Place Holder text for North Vancouver</item>
        <item>Place Holder text for South Vancouver</item>
        <item>Place Holder text for East Vancouver</item>
        <item>Place Holder text for Langley</item>
    </string-array>

    <string name="imageTemp">Temp</string>
    <string name="locationTemp">Temp Location</string>
    <string name="introTemp">Temp Weather</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="testing_api">testing API</string>
    <string name="route_number">Route Number</string>
    <string name="pattern">pattern</string>
    <string name="temp_route_number">temp route number</string>
    <string name="vehicle_num">vehicle num</string>
    <string name="bus_arrival_time">Bus arrival time</string>
    <string name="last_bus_that_arrival_time">last bus that arrival time</string>
    <string name="bus_pattern">bus pattern</string>


</resources>