<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".SearchPage">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <Spinner
        android:id="@+id/searchPage_weatherSpinner"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="@dimen/default_space"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/default_space"
        android:background="#FFFFFF"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchPage_textView_spinnerTitle" />

    <TextView
        android:id="@+id/searchPage_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="@dimen/default_space_child"
        android:layout_marginEnd="200dp"
        android:text="@string/search"
        android:textColor="#D50000"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/searchPage_button_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="@dimen/default_space"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="@dimen/default_space"
        android:onClick="BackToSearch"
        android:text="@string/search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchPage_editTextDate_to"
        tools:ignore="DuplicateSpeakableTextCheck" />


    <TextView
        android:id="@+id/searchPage_textView_spinnerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_space"
        android:layout_marginTop="@dimen/default_space_child"
        android:text="reeeeeeeeeee"
        android:textColor="#FFE082"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchPage_Title" />

    <EditText
        android:id="@+id/searchPage_editTextNumber_temperatureFrom"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="@dimen/default_space_child"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/from"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchPage_textView_temperatureFrom" />

    <EditText
        android:id="@+id/searchPage_editTextNumber_temperatureFrom2"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/to"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="#757575"
        app:layout_constraintStart_toEndOf="@+id/searchPage_editTextNumber_temperatureFrom"
        app:layout_constraintTop_toTopOf="@+id/searchPage_editTextNumber_temperatureFrom" />

    <TextView
        android:id="@+id/searchPage_textView_temperatureFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_space"
        android:layout_marginTop="@dimen/default_space_child"
        android:text="@string/temperature"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchPage_weatherSpinner" />

    <TextView
        android:id="@+id/searchPage_textView_temperatureFrom4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_space"
        android:layout_marginTop="@dimen/default_space_child"
        android:text="@string/date"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchPage_editTextNumber_temperatureFrom" />

    <EditText
        android:id="@+id/searchPage_editTextDate"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="@dimen/default_space"
        android:layout_marginTop="@dimen/default_space_child"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/start_date"
        android:importantForAutofill="no"
        android:inputType="date"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchPage_textView_temperatureFrom4" />

    <EditText
        android:id="@+id/searchPage_editTextDate_to"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="@dimen/default_space"
        android:layout_marginTop="@dimen/default_space_child"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/end_date"
        android:importantForAutofill="no"
        android:inputType="date"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchPage_editTextDate" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/ctnFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>